test/typeCheckTest/fail/test31.ic
class BadGreaterEq {
	void main (string [] args) {
		int geq = true >= new int [][10];
	}
}